--- a/package.json
+++ b/package.json
@@ -41,9 +41,11 @@
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "^2.76.1",
     "@tabler/icons-react": "^3.35.0",
+    "@tanstack/react-query": "^5.90.5",
     "@tanstack/react-table": "^8.21.3",
     "@vercel/analytics": "latest",
     "autoprefixer": "^10.4.20",
+    "better-react-mathjax": "^2.3.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
@@ -51,20 +53,25 @@
     "embla-carousel-react": "8.5.1",
     "framer-motion": "^12.23.24",
     "input-otp": "1.4.1",
+    "katex": "^0.16.25",
     "lucide-react": "^0.454.0",
+    "mammoth": "^1.11.0",
     "motion": "^12.23.24",
     "next": "15.5.6",
     "next-themes": "latest",
+    "node-fetch": "^3.3.2",
     "react": "^19.2.0",
     "react-day-picker": "9.8.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.60.0",
+    "react-katex": "^3.1.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "latest",
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
+    "xlsx": "^0.18.5",
     "zod": "3.25.76"
   },
   "devDependencies": {
@@ -72,6 +79,7 @@
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-katex": "^3.0.4",
     "postcss": "^8.5",
     "tailwindcss": "^4.1.9",
     "tw-animate-css": "1.3.3",
