--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
+    "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "latest",
@@ -45,6 +49,7 @@
     "@tanstack/react-table": "^8.21.3",
     "@vercel/analytics": "latest",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.13.1",
     "better-react-mathjax": "^2.3.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -60,11 +65,14 @@
     "next": "15.5.6",
     "next-themes": "latest",
     "node-fetch": "^3.3.2",
+    "pdf2json": "^4.0.0",
     "react": "^19.2.0",
+    "react-countup": "^6.5.3",
     "react-day-picker": "9.8.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.60.0",
     "react-hot-toast": "^2.6.0",
+    "react-icons": "^5.5.0",
     "react-katex": "^3.1.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "latest",
