--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-katex": "^3.1.0",
+    "react-player": "^3.4.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "latest",
     "sonner": "^1.7.4",
