--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "next-themes": "latest",
     "node-fetch": "^3.3.2",
     "pdf2json": "^4.0.0",
+    "pg-sdk-node": "^2.0.2",
     "react": "^19.2.0",
     "react-countup": "^6.5.3",
     "react-day-picker": "9.8.0",
