--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-katex": "^3.1.0",
+    "react-pdf": "^10.2.0",
     "react-player": "^3.4.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "latest",
@@ -83,6 +84,7 @@
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
     "xlsx": "^0.18.5",
+    "youtube-transcript": "^1.2.1",
     "zod": "3.25.76"
   },
   "devDependencies": {
