--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@supabase/supabase-js": "^2.76.1",
     "@tabler/icons-react": "^3.35.0",
     "@tanstack/react-query": "^5.90.5",
+    "@tanstack/react-query-devtools": "^5.91.1",
     "@tanstack/react-table": "^8.21.3",
     "@vercel/analytics": "latest",
     "autoprefixer": "^10.4.20",
@@ -89,6 +90,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.9",
+    "@tanstack/eslint-plugin-query": "^5.91.2",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
