--- a/package.json
+++ b/package.json
@@ -63,15 +63,15 @@
     "lucide-react": "^0.454.0",
     "mammoth": "^1.11.0",
     "motion": "^12.23.24",
-    "next": "15.5.6",
+    "next": "^16.0.7",
     "next-themes": "latest",
     "node-fetch": "^3.3.2",
     "pdf2json": "^4.0.0",
     "pg-sdk-node": "^2.0.2",
-    "react": "^19.2.0",
+    "react": "^19.2.1",
     "react-countup": "^6.5.3",
     "react-day-picker": "9.8.0",
-    "react-dom": "^19.2.0",
+    "react-dom": "^19.2.1",
     "react-hook-form": "^7.60.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
